updated all pages with author-bio changes

--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -69,18 +69,41 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | The Design",
-        "url": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html",
-        "description": "Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility.",
-        "datePublished": "2025-05-28",
+        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
+        "url": "https://tech-trends-blog.netlify.app",
+        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "inLanguage": "en",
+        "datePublished": "2024-11-15",
+        "dateModified": "2025-05-19",
+        "isPartOf": {
+          "@type": "Blog",
+          "name": "Tech Trends Blog",
+          "url": "https://tech-trends-blog.netlify.app"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://tech-trends-blog.netlify.app"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Projects",
+              "item": "https://tech-trends-blog.netlify.app/projects"
+            }
+          ]
+        },
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
           "url": "https://gennyallison.netlify.app",
+          "jobTitle": "Front-End Developer & AI Content Specialist",
           "sameAs": [
             "https://www.linkedin.com/in/genny-allison/",
-            "https://x.com/allis78978",
-            "https://www.instagram.com/allison_stock_inc/",
             "https://github.com/Allison2002"
           ]
         },
@@ -90,44 +113,26 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
-            "width": 500,
-            "height": 109
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
+            "width": 531,
+            "height": 255
           }
+        },
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
+          "width": 748,
+          "height": 400
         },
         "mainEntity": {
           "@type": "CreativeWork",
           "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app",
-          "description": "An AI-powered SEO blog highlighting the latest trends in digital design, technology, and content strategy."
-        },
-        "breadcrumb": {
-          "@type": "BreadcrumbList",
-          "itemListElement": [
-            {
-              "@type": "ListItem",
-              "position": 1,
-              "name": "Home",
-              "item": "https://gennyallison.netlify.app/"
-            },
-            {
-              "@type": "ListItem",
-              "position": 2,
-              "name": "Projects",
-              "item": "https://gennyallison.netlify.app/pages/collections.html"
-            },
-            {
-              "@type": "ListItem",
-              "position": 3,
-              "name": "Tech Trends Project",
-              "item": "https://tech-trends-blog.netlify.app"
-            },
-            {
-              "@type": "ListItem",
-              "position": 4,
-              "name": "The Design",
-              "item": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html"
-            }
+          "about": [
+            "AI Content Creation",
+            "SEO Optimization",
+            "Web Performance",
+            "WCAG Accessibility",
+            "UI/UX Design"
           ]
         }
       }
