--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -70,9 +70,9 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-grade.html",
-        "description": "Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.",
+        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
+        "url": "https://tech-trends-blog.netlify.app",
+        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
@@ -94,13 +94,7 @@
               "@type": "ListItem",
               "position": 2,
               "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/pages/collections.html"
-            },
-            {
-              "@type": "ListItem",
-              "position": 3,
-              "name": "The Grade",
-              "item": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-grade.html"
+              "item": "https://tech-trends-blog.netlify.app/projects"
             }
           ]
         },
@@ -133,23 +127,14 @@
         },
         "mainEntity": {
           "@type": "CreativeWork",
-          "name": "Tech Trends Project: The Grade",
+          "name": "Tech Trends Blog",
           "about": [
             "AI Content Creation",
             "SEO Optimization",
             "Web Performance",
-            "Core Web Vitals",
-            "100/100 Google PageSpeed Insights",
             "WCAG Accessibility",
-            "PageSpeed Optimization",
-            "Responsive Web Design"
+            "UI/UX Design"
           ]
-        },
-        "primaryImageOfPage": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
-          "width": 748,
-          "height": 400
         }
       }
     </script>
@@ -348,7 +333,7 @@
 
     </style>
   </head>
-    <body>
+  <body>
     <header>
       <nav role="navigation" aria-label="Main navigation">
         <div class="nav-logo">
