--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -647,7 +647,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/my_tube.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
         <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
         <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
         <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
@@ -753,4 +753,5 @@
       </footer>
     <script src="/assets/script.js" defer></script>
   </body>
-</html>     
+</html>      
+      
