--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -486,24 +486,24 @@
             <div class="thumbnails images fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_632/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_384/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_702,h_588/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_358/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_248/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1743469949/seo-grade_mmztmf.avif"
                   alt="Sports Tube PageSpeed Insights score showing 100/100 performance optimization for desktop and mobile"
-                  width="147"
-                  height="124"
+                  width="119"
+                  height="99"
                   loading="auto"  
-                  style="object-fit: cover;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
