updated website grade-img

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -400,7 +400,7 @@
     </header>
     <main class="about-me" id="projects">
       <div class="the-grade">
-          <div class="projects-content">
+        <div class="projects-content">
           <div class="resume-date fancy-border project-title" id="description">
             <h2>project 2 | the grade</h2>
           </div>
@@ -424,7 +424,7 @@
               alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
               width="312"
               height="261"
-              style="object-fits: cover;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
