fixed style attributes for hubspot img

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -680,16 +680,16 @@
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_3882,h_1258/v1732986926/hubspot-grade_hnuolf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_1258/v1732986926/hubspot-grade_hnuolf.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_890/v1732986926/hubspot-grade_hnuolf.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_892/v1732986926/hubspot-grade_hnuolf.avif"
               alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
-              width="312"
-              height="445"
+              width="100%"
+              height="auto"
               style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
@@ -715,7 +715,7 @@
           <img 
             src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
             width="320" 
-            height="234" 
+            height="117" 
             alt="Photo of Genny Allison, the web developer and AI content specialist"
             style="object-fit: contain;"
             loading="auto" 
