--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -662,6 +662,31 @@
               sizes="100vw"
             />
             <img 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_892/v1732986926/hubspot-grade_hnuolf.avif"
+              alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
+              width="100%"
+              height="auto"
+              style="object-fit: cover;"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async"
+            />
+          </picture>
+        </div>
+          <picture>
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1612,h_2296/v1732986926/hubspot-grade_hnuolf.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_1258/v1732986926/hubspot-grade_hnuolf.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_890/v1732986926/hubspot-grade_hnuolf.avif"
               alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
               width="312"
@@ -675,43 +700,44 @@
         </div>
       </div>
       <div class="author-bio-container fancy-border-img" id="author-bio">
-        <picture> 
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 1200px)"
-            sizes="100vw"
-          />
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 481px) and (max-width: 1199px)"
-            sizes="100vw"
-          />
-          <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-            width="320" 
-            height="234" 
-            alt="Photo of Genny Allison, the web developer and AI content specialist"
-            style="object-fit: contain;"
-            loading="auto" 
-            decoding="async" 
-          />
-        </picture> 
-        <div class="author-bio-text">
-          <h3>Partner with an AI Content Specialist & Web Developer</h3>
-          <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-          <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-          <p>Connect with me on 
-            <a href="https://www.linkedin.com/in/genny-allison/" 
-              target="_blank" 
-              rel="noopener noreferrer" 
-              aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
-            </a>, explore my 
-            <a href="https://gennyallison.netlify.app"
-              target="_blank" 
-              rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-              >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="320" 
+              height="234" 
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              style="object-fit: contain;"
+              loading="auto" 
+              decoding="async" 
+            />
+          </picture> 
+          <div class="author-bio-text">
+            <h3>Partner with an AI Content Specialist & Web Developer</h3>
+            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
+            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+            <p>Connect with me on 
+              <a href="https://www.linkedin.com/in/genny-allison/" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+              </a>, explore my 
+              <a href="https://gennyallison.netlify.app"
+                target="_blank" 
+                rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
+                >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+          </div>
         </div>
       </div>
     </main>
@@ -825,4 +851,4 @@
       </footer>
     <script src="/assets/script.js" defer></script>
   </body>
-</html>     
+</html>      
