changed hero image inline sizing

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Discover how Genny Allison achieved a perfect 100/100 PageSpeed Insights score using AI-powered content, SEO optimization strategies, and Core Web Vitals improvements. This case study highlights performance-driven web design and image enhancements for fast, responsive websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
-
     <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
@@ -377,12 +376,11 @@
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
-          
 
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1748537741/sports-tube-mobile_j2lush.avif"
-            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
+            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             width="164"
             height="176"
             style="object-fit: cover;"
@@ -402,7 +400,7 @@
       <div class="the-grade">
         <div class="projects-content">
           <div class="resume-date fancy-border project-title" id="description">
-            <h2>project 2 | the grade</h2>
+            <h2>project 1 | the grade</h2>
           </div>
         </div>
         <div class="website-grade fancy-border-img">
@@ -555,7 +553,7 @@
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border project-title">
+        <div class="resume-date fancy-border project  -title">
           <h2>the grade: mobile</h2>
           <h2>page speed insights</h2>
         </div>
