updated all pages with author-bio edits

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -589,9 +589,9 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip,w_640,h_234/v1746550266/allisonstock-logo_xgohg9.avif" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="320" 
-              height="auto" 
+              height="234" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
               style="object-fit: contain;"
               loading="auto" 
@@ -727,4 +727,3 @@
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
-      
