added h2 to casestudy article

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -462,6 +462,9 @@
           </picture>
         </div>
         <div class="resume-summary">
+          <h2>
+            AI Content Creator & SEO Specialist Portfolio Project
+          </h2>
           <p>
             These results highlight the powerful synergy between AI-driven solutions and a developer’s vision, demonstrating how technology can enhance accessibility, functionality, and performance. They reflect my dedication to building websites that are not only fast and accessible but also strategically designed to meet user needs and boost engagement.
           </p>
