--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -431,6 +431,9 @@
           </picture>
         </div>
         <div class="resume-summary">
+          <h2>
+            AI Content Creator & SEO Specialist Portfolio Project
+          </h2>
           <p> Achieving <strong>100/100</strong> on mobile and <strong>100/100 </strong>on desktop in <strong>Google PageSpeed Insights</strong> highlights my continuous drive for excellence in <strong>SEO optimization</strong> and performance. This score reflects my ability to adapt to the recent changes in scoring methods and ensures that my websites remain fast and user-friendly across all devices. </p>
 
           <p>
