adjusted padding in fancy-border for mobile devices

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -454,7 +454,7 @@
     </header>
     <main class="about-me" id="casestudy">
         <div class="resume-date fancy-border project-title" id="description">
-          <h2>project 1 | the grade</h2>
+          <h2>project 1 | the casestudy</h2>
           <h2>tech trends</h2>
         </div>
         <article class="resume-summary casestudy" id="section2">
