--- a/pages/project3.html
+++ b/pages/project3.html
@@ -873,13 +873,10 @@
               </div>
               <article class="resume-border">   
                 <div class="resume-summary casestudy-container">
-                  <div class="casestudy">
                     <p><strong>Case Study: </strong>Sports Tube Community</p>
                     <p><strong>Role:</strong> Full-Stack Developer, AI Content Creator, <strong>SEO Content Specialist</strong>, AI-Powered Journalist<a href="https://sports-tube-community.netlify.app/" style="text-decoration: underline;">Sports Tube Community</a></p>
                     <p><strong>GitHub Repository: </strong><a href="https://github.com/Allison2002/sports_tube_community.git">View the Code</a></p>
-                  </div>
                   <hr class="casestudy-hr">
-                  <div class="casestudy" id="introduction">
                     <h3>Introduction</h3>
                     <p>The Sports Tube Community is a vibrant blog platform crafted to engage sports enthusiasts through curated articles, intuitive navigation, and dynamic visuals. This project showcases my ability to integrate <strong>AI-driven content creation, SEO optimization, </strong>and <strong>web development skills</strong> to deliver a responsive and user-friendly platform. Designed to showcase my proficiency in <strong>blog creation</strong> and <strong>article writing</strong> using <strong>AI tools</strong>, alongside performance optimization techniques, the Sports Tube Community seamlessly bridges creativity and technology.</p>
                     <p>By leveraging tools such as <Strong>Figma, Canva, MidJourney, ChatGPT, Uizard,</Strong> and <strong>Google PageSpeed Insights</strong>, I ensured a seamless user experience while achieving top-tier performance and accessibility. This project demonstrates my expertise in creating engaging content, optimizing for search engines, and designing visually compelling platforms.</p>
@@ -900,26 +897,27 @@
                     <p>
                       AI tools were integral to the success of this project, empowering me to create engaging content, striking visuals, and a user-friendly interface while maintaining top-tier performance and accessibility.
                     </p>
-                    <ul>
-                      <li>
-                        <strong>ChatGPT:</strong> Crafted article drafts, headlines, and SEO-focused meta descriptions, which I carefully refined to align with audience needs and industry standards.
-                      </li>
-                      <li>
-                        <strong>MidJourney:</strong> Designed visually captivating hero banners and imagery that perfectly complemented the site’s modern aesthetic.
-                      </li>
-                      <li>
-                        <strong>Canva:</strong> Enhanced and customized graphics for a cohesive and professional presentation across the platform.
-                      </li>
-                      <li>
-                        <strong>Uizard and Figma:</strong> Guided the UI/UX design process with interactive wireframes and prototypes, ensuring an intuitive and engaging user experience.
-                      </li>
-                      <li>
-                        <strong>Google PageSpeed Insights:</strong> Supported performance optimization by pinpointing and resolving potential speed and loading issues, culminating in a perfect score.
-                      </li>
-                    </ul>
+                    
+                      <ul>
+                        <li>
+                          <strong>ChatGPT:</strong> Crafted article drafts, headlines, and SEO-focused meta descriptions, which I carefully refined to align with audience needs and industry standards.
+                        </li>
+                        <li>
+                          <strong>MidJourney:</strong> Designed visually captivating hero banners and imagery that perfectly complemented the site’s modern aesthetic.
+                        </li>
+                        <li>
+                          <strong>Canva:</strong> Enhanced and customized graphics for a cohesive and professional presentation across the platform.
+                        </li>
+                        <li>
+                          <strong>Uizard and Figma:</strong> Guided the UI/UX design process with interactive wireframes and prototypes, ensuring an intuitive and engaging user experience.
+                        </li>
+                        <li>
+                          <strong>Google PageSpeed Insights:</strong> Supported performance optimization by pinpointing and resolving potential speed and loading issues, culminating in a perfect score.
+                        </li>
+                      </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>SEO Optimization</h3>
                     <p>
                       SEO was a cornerstone of this project, ensuring the Sports Tube Community reached its intended audience with maximum visibility and engagement:
@@ -941,7 +939,7 @@
                     </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>Content Creation and Engagement</h3>
                     <p>The Sports Tube Community relied on AI to streamline content creation while maintaining high-quality outputs:</p>
                     <ul>
@@ -951,7 +949,7 @@
                     </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>Development Process</h3>
                     <ul>
                       <li><strong>Technology Stack:</strong> HTML, CSS, JavaScript, hosted on Netlify for efficient deployment.</li>
@@ -961,7 +959,7 @@
                     </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>Key Results</h3>
                     <ul>
                       <li><strong>Performance:</strong> Added details about LCP improvements and modern formats like WebP to emphasize the technical optimizations.</li>                       
@@ -971,7 +969,7 @@
                     </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>Challenges and Solutions</h3>
                     <ul>
                       <li>
@@ -995,7 +993,7 @@
                     </ul>
                   </div>
                   <hr class="casestudy-hr">
-                  <div class="list-items casestudy">
+                  <div class="list-items">
                     <h3>Outcome</h3>
                     <p>The Sports Tube Community exemplifies my ability to merge AI-driven tools, SEO strategies, and storytelling expertise into a cohesive platform. This case study is a featured project in my AI content creation portfolio, highlighting my expertise in blending artificial intelligence with strategic SEO and responsive design:</p>
                     <ul>
