--- a/pages/collections.html
+++ b/pages/collections.html
@@ -200,7 +200,7 @@
       }
 
       .canvas-skills-grid img {
-        object-position: center;
+        object-position: center center;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
@@ -507,7 +507,7 @@
         </div>
         <div class="collection-thumbnail-box">
           <div class="collections-title fancy-border-title">
-            <h2><a href="/pages/project3.html">project 3</a></h2>
+            <h2><a href="/pages/project3/project3-intro.html">project 3</a></h2>
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
